// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BaseButton executes callback 1`] = `
<button
  className="sc-bxivhb kBfEqg sc-htpNat clPCcB sc-bwzfXH kGsEoO sc-bdVaJa gSLeks"
  onClick={[Function]}
  type="button"
>
  ButtonValue
</button>
`;

exports[`BaseButton executes callback 2`] = `
<button
  className="sc-bxivhb kBfEqg sc-htpNat clPCcB sc-bwzfXH kGsEoO sc-bdVaJa gSLeks"
  onClick={[Function]}
  type="button"
>
  ButtonValue
</button>
`;

exports[`SnippetPreviewButton executes callback 1`] = `
<button
  className="sc-ifAKCX ckKDht sc-bxivhb kBfEqg sc-htpNat clPCcB sc-bwzfXH kGsEoO sc-bdVaJa gSLeks"
  onClick={[Function]}
  type="button"
>
  ButtonValue
</button>
`;

exports[`SnippetPreviewButton executes callback 2`] = `
<button
  className="sc-ifAKCX ckKDht sc-bxivhb kBfEqg sc-htpNat clPCcB sc-bwzfXH kGsEoO sc-bdVaJa gSLeks"
  onClick={[Function]}
  type="button"
>
  ButtonValue
</button>
`;

exports[`the BaseButton matches the snapshot 1`] = `
<button
  className="sc-bxivhb kBfEqg sc-htpNat clPCcB sc-bwzfXH kGsEoO sc-bdVaJa gSLeks"
  type="button"
>
  ButtonValue
</button>
`;

exports[`the IconButton matches the snapshot 1`] = `
<button
  className="sc-EHOje bYWNZw sc-ifAKCX ckKDht sc-bxivhb kBfEqg sc-htpNat clPCcB sc-bwzfXH kGsEoO sc-bdVaJa gSLeks"
  type="button"
>
  <svg
    aria-hidden="true"
    className="sc-bZQynM gdBXij"
  />
</button>
`;

exports[`the IconButton with text matches the snapshot 1`] = `
<button
  className="sc-EHOje bYWNZw sc-ifAKCX ckKDht sc-bxivhb kBfEqg sc-htpNat clPCcB sc-bwzfXH kGsEoO sc-bdVaJa gSLeks"
  type="button"
>
  <svg
    aria-hidden="true"
    className="sc-gzVnrw gGhCha sc-htoDjs gKJpvu"
  />
  Click
</button>
`;

exports[`the SnippetPreviewButton matches the snapshot 1`] = `
<button
  className="sc-ifAKCX ckKDht sc-bxivhb kBfEqg sc-htpNat clPCcB sc-bwzfXH kGsEoO sc-bdVaJa gSLeks"
  type="button"
>
  ButtonValue
</button>
`;
